refactor(setting): 优化权限管理相关代码并调整缓存策略
- 删除初始化SQL脚本中sysRole、sysUser1、sysPost和sysMenuPermission数据插入，清理冗余代码
- 在ISysUserService接口新增获取用户角色编码列表方法getRoleKeys
- 调整StpInterfaceImpl中获取角色列表逻辑，改用getRoleKeys接口减少实体依赖
- 修改SysRole实体，将权限字段由权限对象列表改为权限ID列表，简化数据结构
- 调整SysRoleServiceImpl中设置权限逻辑，保存权限ID列表并增加缓存清理
- 在MenuPermissionServiceImpl更新方法上添加缓存失效注解，保证权限更新时缓存同步
- 统一修改MenuPermissionController和SysRoleController中权限校验注解，移除冗余前缀“menu:”
- 在SysDeptController分页方法加权限校验注解，支持管理员角色访问
- 为SysMenuPermission.Meta类添加链式访问支持，提升代码可用性和简洁度